maze.lessons.maze.pledge.PledgeMaze.scala.code
override def run() {
	def murGauche():Boolean = {
		gauche();
		if (estFaceMur()) {
			droite();
			return true;
		}
		droite();
		return false;
	}
	def isDirectionFree(dir:Direction) {
		var D=Direction.NORTH;
		setDirection(dir);
		if (!estFaceMur()) {
			return true;
		}
		else {
			setDirection(D);
			return false;
		}
	}
	var sommeAngle:Int = 0;
	def keepHandOnSideWall {
		do {
			if (murGauche() && !estFaceMur()) {
				avance();
			}
			else if (murGauche() && estFaceMur()) {
				droite();
				sommeAngle -=1;
				if (!estFaceMur()) {
					avance();
				}
			}
			else {
				gauche();
				sommeAngle +=1;
				avance();
			}
		} while (sommeAngle != 0 && !isDirectionFree(Direction.NORTH))
	}
	
setDirection(Direction.NORTH);
while (!estSurBiscuit()) {
	if (isDirectionFree(Direction.NORTH)) {
		avance();
	}
	else {
		droite();
		keepHandOnSideWall();
	}
}
prendBiscuit();
}
